--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"example.aternos.ip",
-	"port": "25565",
-	"name": "afkbot1",
-	"auto-night-skip":"true"
+	"ip":"PotatoCraftS2.aternos.me",
+	"port": "54256",
+	"name": "Mr.Potato",
+	"auto-night-skip":"skip"
 }
